-- This is a generated file from https://dbdiagram.io, we used code to write the SQL for this database. the wesite visualized and generated this file for us so that sqp can create the tables

CREATE TABLE "refresh_tokens" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "client_id" uuid NOT NULL,
  "instance_id" uuid NOT NULL,
  "token" varchar UNIQUE NOT NULL,
  "user_id" uuid NOT NULL,
  "revoked" bool NOT NULL DEFAULT false,
  "revoked_at" timestamp,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now()),
  "session_id" uuid NOT NULL,
  "parent" uuid,
  "expires_at" timestamp NOT NULL
);

CREATE TABLE "access_tokens" (
  "id" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "client_id" uuid NOT NULL,
  "instance_id" uuid NOT NULL,
  "token" varchar UNIQUE NOT NULL,
  "user_id" uuid NOT NULL,
  "revoked" bool NOT NULL DEFAULT false,
  "revoked_at" timestamp,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now()),
  "session_id" uuid NOT NULL,
  "parent" uuid,
  "expires_at" timestamp NOT NULL,
  "scope" text[]
);

CREATE TABLE "sessions" (
  "id" uuid PRIMARY KEY,
  "client_id" uuid NOT NULL,
  "user_id" uuid NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now()),
  "aal" varchar NOT NULL DEFAULT '1',
  "refreshed_at" timestamp,
  "expires_at" timestamp NOT NULL,
  "user_agent" text,
  "ip" inet,
  "tag" text,
  "is_active" bool NOT NULL DEFAULT true
);

CREATE TABLE "users" (
  "id" uuid PRIMARY KEY,
  "client_id" uuid NOT NULL,
  "instance_id" uuid NOT NULL,
  "aud" varchar NOT NULL,
  "role" varchar NOT NULL DEFAULT 'user',
  "meta_data" jsonb,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now()),
  "last_signed_in_at" timestamp,
  "is_banned" bool NOT NULL DEFAULT false,
  "is_deleted" bool NOT NULL DEFAULT false,
  "deleted_at" timestamp,
  "is_super_user" bool NOT NULL DEFAULT false
);

CREATE TABLE "user_attributes" (
  "id" uuid PRIMARY KEY,
  "user_id" uuid NOT NULL,
  "key" varchar NOT NULL,
  "value" jsonb NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE TABLE "identities" (
  "id" uuid PRIMARY KEY,
  "client_id" uuid NOT NULL,
  "provider_type" varchar NOT NULL,
  "provider_id" varchar NOT NULL,
  "user_id" uuid NOT NULL,
  "data" jsonb,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now()),
  "last_signed_in_at" timestamp,
  "email" varchar,
  "phone" varchar,
  "email_verified" bool NOT NULL DEFAULT false,
  "phone_verified" bool NOT NULL DEFAULT false
);

CREATE TABLE "authentication_flows" (
  "id" uuid PRIMARY KEY,
  "client_id" uuid NOT NULL,
  "user_id" uuid,
  "provider_type" varchar NOT NULL,
  "auth_code" varchar UNIQUE,
  "code_challenge" varchar,
  "code_challenge_method" varchar,
  "provider_access_token" varchar,
  "provider_refresh_token" varchar,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now()),
  "auth_code_issued_at" timestamp,
  "expires_at" timestamp NOT NULL,
  "redirect_uri" text NOT NULL,
  "state" varchar
);

CREATE TABLE "clients" (
  "id" uuid PRIMARY KEY,
  "name" varchar NOT NULL,
  "secret" text NOT NULL,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now()),
  "redirect_uris" text[] NOT NULL,
  "allowed_origins" text[],
  "logo_url" text
);

CREATE TABLE "providers" (
  "type" varchar PRIMARY KEY,
  "mappings" jsonb,
  "name" text NOT NULL,
  "icon" text,
  "description" text,
  "enabled" bool NOT NULL DEFAULT true
);

CREATE TABLE "client_providers" (
  "id" uuid PRIMARY KEY,
  "client_id" uuid NOT NULL,
  "provider_type" varchar NOT NULL,
  "enabled" bool NOT NULL DEFAULT true,
  "data" jsonb,
  "created_at" timestamp NOT NULL DEFAULT (now()),
  "updated_at" timestamp NOT NULL DEFAULT (now())
);

CREATE UNIQUE INDEX ON "refresh_tokens" ("token");

CREATE INDEX ON "refresh_tokens" ("user_id");

CREATE INDEX ON "refresh_tokens" ("client_id");

CREATE INDEX ON "refresh_tokens" ("session_id");

CREATE INDEX ON "refresh_tokens" ("revoked");

CREATE UNIQUE INDEX ON "access_tokens" ("token");

CREATE INDEX ON "access_tokens" ("user_id");

CREATE INDEX ON "access_tokens" ("client_id");

CREATE INDEX ON "access_tokens" ("session_id");

CREATE INDEX ON "access_tokens" ("revoked");

CREATE INDEX ON "sessions" ("user_id");

CREATE INDEX ON "sessions" ("client_id");

CREATE INDEX ON "sessions" ("expires_at");

CREATE INDEX ON "sessions" ("is_active");

CREATE INDEX ON "users" ("client_id");

CREATE INDEX ON "users" ("role");

CREATE INDEX ON "users" ("is_banned");

CREATE INDEX ON "users" ("is_deleted");

CREATE INDEX ON "users" ("is_super_user");

CREATE UNIQUE INDEX ON "user_attributes" ("user_id", "key");

CREATE UNIQUE INDEX ON "identities" ("provider_type", "provider_id");

CREATE INDEX ON "identities" ("user_id");

CREATE INDEX ON "identities" ("email");

CREATE INDEX ON "identities" ("phone");

CREATE INDEX ON "identities" ("client_id");

CREATE UNIQUE INDEX ON "authentication_flows" ("auth_code");

CREATE INDEX ON "authentication_flows" ("client_id");

CREATE INDEX ON "authentication_flows" ("user_id");

CREATE INDEX ON "authentication_flows" ("expires_at");

CREATE INDEX ON "clients" ("name");

CREATE INDEX ON "providers" ("enabled");

CREATE UNIQUE INDEX ON "client_providers" ("client_id", "provider_type");

CREATE INDEX ON "client_providers" ("enabled");

ALTER TABLE "refresh_tokens" ADD FOREIGN KEY ("client_id") REFERENCES "clients" ("id");

ALTER TABLE "refresh_tokens" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "refresh_tokens" ADD FOREIGN KEY ("session_id") REFERENCES "sessions" ("id");

ALTER TABLE "refresh_tokens" ADD FOREIGN KEY ("parent") REFERENCES "refresh_tokens" ("id");

ALTER TABLE "access_tokens" ADD FOREIGN KEY ("client_id") REFERENCES "clients" ("id");

ALTER TABLE "access_tokens" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "access_tokens" ADD FOREIGN KEY ("session_id") REFERENCES "sessions" ("id");

ALTER TABLE "access_tokens" ADD FOREIGN KEY ("parent") REFERENCES "refresh_tokens" ("id");

ALTER TABLE "sessions" ADD FOREIGN KEY ("client_id") REFERENCES "clients" ("id");

ALTER TABLE "sessions" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "users" ADD FOREIGN KEY ("client_id") REFERENCES "clients" ("id");

ALTER TABLE "user_attributes" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "identities" ADD FOREIGN KEY ("client_id") REFERENCES "clients" ("id");

ALTER TABLE "identities" ADD FOREIGN KEY ("provider_type") REFERENCES "providers" ("type");

ALTER TABLE "identities" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "authentication_flows" ADD FOREIGN KEY ("client_id") REFERENCES "clients" ("id");

ALTER TABLE "authentication_flows" ADD FOREIGN KEY ("user_id") REFERENCES "users" ("id");

ALTER TABLE "authentication_flows" ADD FOREIGN KEY ("provider_type") REFERENCES "providers" ("type");

ALTER TABLE "client_providers" ADD FOREIGN KEY ("client_id") REFERENCES "clients" ("id");

ALTER TABLE "client_providers" ADD FOREIGN KEY ("provider_type") REFERENCES "providers" ("type");
